fix:footer overflow issue.

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -156,4 +158,10 @@ header {
   display: flex;
   flex-direction: column;
 }
+
+.home-header {
+  padding: 16px 32px;
+  margin: 16px 32px;
+}
+
 
